[package]
name = "fpush-demopush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fpush-demopush"
path = "src/main.rs"

[dependencies]
log.workspace = true
async-trait.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
fpush-traits.workspace = true

# Dependencies for the HTTP server binary
actix-web = "4"
serde = { workspace = true }
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
env_logger = { workspace = true, optional = true }

[features]
default = ["env_logger"]
